--- a/mscore/debugger/measure.ui
+++ b/mscore/debugger/measure.ui
@@ -253,21 +253,17 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="8">
-         <widget class="QDoubleSpinBox" name="oldWidth">
-          <property name="maximum">
-           <double>10000.000000000000000</double>
+        <item row="3" column="0">
+         <widget class="QLabel" name="label_12">
+          <property name="toolTip">
+           <string notr="true"/>
           </property>
-         </widget>
-        </item>
-        <item row="3" column="6">
-         <widget class="QLabel" name="label_10">
           <property name="text">
-           <string>oldWidth:</string>
+           <string notr="true">mmRestCount:</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="5">
+        <item row="3" column="2">
          <widget class="QSpinBox" name="mmRestCount">
           <property name="minimum">
            <number>-2</number>
@@ -277,13 +273,17 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="3">
-         <widget class="QLabel" name="label_12">
-          <property name="toolTip">
-           <string notr="true"/>
+        <item row="3" column="5">
+         <widget class="QDoubleSpinBox" name="oldWidth">
+          <property name="maximum">
+           <double>10000.000000000000000</double>
           </property>
+         </widget>
+        </item>
+        <item row="3" column="3">
+         <widget class="QLabel" name="label_10">
           <property name="text">
-           <string notr="true">mmRestCount:</string>
+           <string>oldWidth:</string>
           </property>
          </widget>
         </item>
@@ -306,10 +306,10 @@
         <property name="spacing">
          <number>2</number>
         </property>
-        <item row="1" column="0">
-         <widget class="QCheckBox" name="pageBreak">
+        <item row="1" column="3">
+         <widget class="QPushButton" name="mmRest">
           <property name="text">
-           <string notr="true">Page Break</string>
+           <string notr="true">mmRest</string>
           </property>
          </widget>
         </item>
@@ -317,6 +317,75 @@
          <widget class="QCheckBox" name="breakMultiMeasureRest">
           <property name="text">
            <string notr="true">breakMultiMeasureRest</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QCheckBox" name="endRepeat">
+          <property name="text">
+           <string notr="true">EndRepeat</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1" colspan="2">
+         <widget class="QCheckBox" name="noBreak">
+          <property name="text">
+           <string notr="true">NoBreak (group with next)</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QCheckBox" name="pageBreak">
+          <property name="text">
+           <string notr="true">PageBreak</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QCheckBox" name="startRepeat">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string notr="true">StartRepeat</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QCheckBox" name="lineBreak">
+          <property name="text">
+           <string notr="true">SystemBreak</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <widget class="QCheckBox" name="hasSystemHeader">
+          <property name="text">
+           <string notr="true">SystemHeader</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1">
+         <widget class="QCheckBox" name="hasSystemTrailer">
+          <property name="text">
+           <string notr="true">SystemTrailer</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QCheckBox" name="sectionBreak">
+          <property name="text">
+           <string notr="true">SectionBreak</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="2">
+         <widget class="QCheckBox" name="hasCourtesyKeySig">
+          <property name="text">
+           <string notr="true">CourtesyKeySig</string>
           </property>
          </widget>
         </item>
@@ -333,69 +402,7 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="0">
-         <widget class="QCheckBox" name="lineBreak">
-          <property name="text">
-           <string notr="true">System Break</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1">
-         <widget class="QCheckBox" name="sectionBreak">
-          <property name="text">
-           <string notr="true">Section Break</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
-         <widget class="QCheckBox" name="startRepeat">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="text">
-           <string notr="true">StartRepeat</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="3">
-         <widget class="QPushButton" name="mmRest">
-          <property name="text">
-           <string notr="true">mmRest</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="2">
-         <widget class="QCheckBox" name="endRepeat">
-          <property name="text">
-           <string notr="true">EndRepeat</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="0">
-         <widget class="QCheckBox" name="hasSystemHeader">
-          <property name="text">
-           <string notr="true">SystemHeader</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="1">
-         <widget class="QCheckBox" name="hasSystemTrailer">
-          <property name="text">
-           <string notr="true">SystemTrailer</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="2">
-         <widget class="QCheckBox" name="hasCourtesyKeySig">
-          <property name="text">
-           <string notr="true">CourtesyKeySig</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="3">
+        <item row="3" column="2">
          <widget class="QCheckBox" name="hasVoices">
           <property name="text">
            <string notr="true">hasVoices</string>
