--- a/mscore/editstyle.ui
+++ b/mscore/editstyle.ui
@@ -95,6 +95,11 @@
       </item>
       <item>
        <property name="text">
+        <string>Measure Repeats</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
         <string>Beams</string>
        </property>
       </item>
@@ -5820,6 +5825,216 @@ By default, they will be placed such as that their right end are at the same lev
          </spacer>
         </item>
        </layout>
+      </widget>
+      <widget class="QWidget" name="PageMeasureRepeats">
+       <widget class="QGroupBox" name="groupBox_2">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>0</y>
+          <width>692</width>
+          <height>624</height>
+         </rect>
+        </property>
+        <property name="title">
+         <string>Measure Repeats</string>
+        </property>
+        <layout class="QGridLayout" name="gridLayout_53">
+         <item row="3" column="0" colspan="2">
+          <widget class="QCheckBox" name="fourMeasureRepeatShowExtenders">
+           <property name="text">
+            <string>Show extenders on 4-measure repeats</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_163">
+           <property name="text">
+            <string>Number position:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="2">
+          <widget class="QToolButton" name="resetFourMeasureRepeatShowExtenders">
+           <property name="toolTip">
+            <string>Reset to default</string>
+           </property>
+           <property name="accessibleName">
+            <string>Reset 'Show extenders on 4-measure repeats' value</string>
+           </property>
+           <property name="text">
+            <string notr="true"/>
+           </property>
+           <property name="icon">
+            <iconset resource="musescore.qrc">
+             <normaloff>:/data/icons/edit-reset.svg</normaloff>:/data/icons/edit-reset.svg</iconset>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="2">
+          <widget class="QToolButton" name="resetMeasureRepeatNumberPos">
+           <property name="accessibleName">
+            <string>Reset 'Number position' value</string>
+           </property>
+           <property name="text">
+            <string notr="true"/>
+           </property>
+           <property name="icon">
+            <iconset>
+             <normaloff>:/data/icons/edit-reset.svg</normaloff>:/data/icons/edit-reset.svg</iconset>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="2">
+          <widget class="QToolButton" name="resetOneMeasureRepeatShow1">
+           <property name="accessibleName">
+            <string>Reset 'Show &quot;1&quot; on 1-measure repeats' value</string>
+           </property>
+           <property name="text">
+            <string notr="true"/>
+           </property>
+           <property name="icon">
+            <iconset>
+             <normaloff>:/data/icons/edit-reset.svg</normaloff>:/data/icons/edit-reset.svg</iconset>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0" colspan="2">
+          <widget class="QCheckBox" name="oneMeasureRepeatShow1">
+           <property name="text">
+            <string>Show &quot;1&quot; on 1-measure repeats</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="0">
+          <spacer name="verticalSpacer_38">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="1" column="1">
+          <widget class="QDoubleSpinBox" name="measureRepeatNumberPos">
+           <property name="suffix">
+            <string>sp</string>
+           </property>
+           <property name="minimum">
+            <double>-99.989999999999995</double>
+           </property>
+           <property name="singleStep">
+            <double>0.500000000000000</double>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="3">
+          <spacer name="horizontalSpacer_25">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="4" column="0" colspan="3">
+          <widget class="QGroupBox" name="mrNumberSeries">
+           <property name="title">
+            <string>Number consecutive measure repeats</string>
+           </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+           <layout class="QGridLayout" name="gridLayout_58">
+            <item row="1" column="0">
+             <widget class="QCheckBox" name="mrNumberSeriesWithParentheses">
+              <property name="text">
+               <string>With parentheses</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QToolButton" name="resetMRNumberSeriesWithParentheses">
+              <property name="accessibleName">
+               <string>Reset 'With parentheses' value</string>
+              </property>
+              <property name="text">
+               <string notr="true"/>
+              </property>
+              <property name="icon">
+               <iconset>
+                <normaloff>:/data/icons/edit-reset.svg</normaloff>:/data/icons/edit-reset.svg</iconset>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="0" colspan="2">
+             <layout class="QHBoxLayout" name="horizontalLayout_9">
+              <item>
+               <widget class="QLabel" name="label_170">
+                <property name="text">
+                 <string>Every</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QSpinBox" name="mrNumberEveryXMeasures">
+                <property name="minimum">
+                 <number>1</number>
+                </property>
+                <property name="maximum">
+                 <number>10</number>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLabel" name="label_171">
+                <property name="text">
+                 <string>measures</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <spacer name="horizontalSpacer_58">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>40</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
+              <item>
+               <widget class="QToolButton" name="resetMRNumberEveryXMeasures">
+                <property name="accessibleName">
+                 <string>Reset 'Every X measures' value</string>
+                </property>
+                <property name="text">
+                 <string notr="true"/>
+                </property>
+                <property name="icon">
+                 <iconset>
+                  <normaloff>:/data/icons/edit-reset.svg</normaloff>:/data/icons/edit-reset.svg</iconset>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </item>
+           </layout>
+          </widget>
+         </item>
+        </layout>
+       </widget>
       </widget>
       <widget class="QWidget" name="PageBeams">
        <layout class="QVBoxLayout" name="verticalLayout_14">
