Add missing mensural prolations to time signature properties dialog
Backport of #31557

--- a/mscore/musescore.qrc
+++ b/mscore/musescore.qrc
@@ -178,8 +178,10 @@
         <file>data/icons/timesig_prolatio03.svg</file>
         <file>data/icons/timesig_prolatio04.svg</file>
         <file>data/icons/timesig_prolatio05.svg</file>
+        <file>data/icons/timesig_prolatio06.svg</file>
         <file>data/icons/timesig_prolatio07.svg</file>
         <file>data/icons/timesig_prolatio08.svg</file>
+        <file>data/icons/timesig_prolatio09.svg</file>
         <file>data/icons/timesig_prolatio10.svg</file>
         <file>data/icons/timesig_prolatio11.svg</file>
         <file>data/icons/dialog-error.svg</file>
